Get available rooms
Header, book now button are ready
(fix button book and create file room_details)

--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="main_page.html"><img src="images/logo.png" alt="#" /></a>
+                           <a href="main_page.php"><img src="images/logo.png" alt="#" /></a>
                         </div>
                      </div>
                   </div>
@@ -63,19 +63,19 @@
                      <div class="collapse navbar-collapse" id="navbarsExample04">
                         <ul class="navbar-nav mr-auto">
                            <li class="nav-item ">
-                              <a class="nav-link" href="main_page.html">Home</a>
+                              <a class="nav-link" href="main_page.php">Home</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="about.html">About</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="room.html">Our room</a>
+                              <a class="nav-link" href="room.html">Our Rooms</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="specialOffers.html">Special Offers</a>
                            </li>
                            <li class="nav-item active">
-                              <a class="nav-link" href="blog.html">Blog</a>
+                              <a class="nav-link" href="services.html">Services</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="contact.html">Contact Us</a>
@@ -95,14 +95,14 @@
          <div class="row">
             <div class="col-md-12">
                <div class="title">
-                  <h2>Blog</h2>
+                  <h2>Services</h2>
                </div>
             </div>
          </div>
       </div>
    </div>
-   <!-- blog -->
-   <div class="blog">
+   <!-- services -->
+   <div class="services">
       <div class="container">
          <div class="row">
             <div class="col-md-12">
@@ -114,11 +114,11 @@
          </div>
          <div class="row">
             <div class="col-md-4">
-               <div class="blog_box">
-                  <div class="blog_img">
-                     <figure><img src="images/blog1.jpg" alt="#" /></figure>
+               <div class="services_box">
+                  <div class="services_img">
+                     <figure><img src="images/services1.jpg" alt="#" /></figure>
                   </div>
-                  <div class="blog_room">
+                  <div class="services_room">
                      <h3>Bed Room</h3>
                      <span>The standard chunk </span>
                      <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
@@ -127,11 +127,11 @@
                </div>
             </div>
             <div class="col-md-4">
-               <div class="blog_box">
-                  <div class="blog_img">
-                     <figure><img src="images/blog2.jpg" alt="#" /></figure>
+               <div class="services_box">
+                  <div class="services_img">
+                     <figure><img src="images/services2.jpg" alt="#" /></figure>
                   </div>
-                  <div class="blog_room">
+                  <div class="services_room">
                      <h3>Bed Room</h3>
                      <span>The standard chunk </span>
                      <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
@@ -140,11 +140,11 @@
                </div>
             </div>
             <div class="col-md-4">
-               <div class="blog_box">
-                  <div class="blog_img">
-                     <figure><img src="images/blog3.jpg" alt="#" /></figure>
+               <div class="services_box">
+                  <div class="services_img">
+                     <figure><img src="images/services3.jpg" alt="#" /></figure>
                   </div>
-                  <div class="blog_room">
+                  <div class="services_room">
                      <h3>Bed Room</h3>
                      <span>The standard chunk </span>
                      <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
@@ -155,7 +155,7 @@
          </div>
       </div>
    </div>
-   <!-- end blog -->
+   <!-- end services -->
 
    <!--  footer -->
    <footer>
@@ -175,9 +175,9 @@
                   <ul class="link_menu">
                      <li><a href="#">Home</a></li>
                      <li><a href="about.html"> about</a></li>
-                     <li><a href="room.html">Our Room</a></li>
+                     <li><a href="room.html">Our Rooms</a></li>
                      <li><a href="specialOffers.html">Special Offers</a></li>
-                     <li class="active"><a href="blog.html">Blog</a></li>
+                     <li class="active"><a href="services.html">Services</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                </div>
