--- a/specialOffers.html
+++ b/specialOffers.html
@@ -49,7 +49,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="main_page.html"><img src="images/logo.png" alt="#" /></a>
+                           <a href="main_page.php"><img src="images/logo.png" alt="#" /></a>
                         </div>
                      </div>
                   </div>
@@ -63,19 +63,19 @@
                      <div class="collapse navbar-collapse" id="navbarsExample04">
                         <ul class="navbar-nav mr-auto">
                            <li class="nav-item ">
-                              <a class="nav-link" href="main_page.html">Home</a>
+                              <a class="nav-link" href="main_page.php">Home</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="about.html">About</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="room.html">Our room</a>
+                              <a class="nav-link" href="room.html">Our rooms</a>
                            </li>
                            <li class="nav-item active">
                               <a class="nav-link" href="specialOffers.html">Special Offers</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="blog.html">Blog</a>
+                              <a class="nav-link" href="services.html">Services</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="contact.html">Contact Us</a>
@@ -169,9 +169,9 @@
                   <ul class="link_menu">
                      <li><a href="#">Home</a></li>
                      <li><a href="about.html"> about</a></li>
-                     <li><a href="room.html">Our Room</a></li>
+                     <li><a href="room.html">Our Rooms</a></li>
                      <li class="active"><a href="specialOffers.html">Special Offers</a></li>
-                     <li><a href="blog.html">Blog</a></li>
+                     <li><a href="services.html">Services</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                </div>
