--- a/admin_main_page.html
+++ b/admin_main_page.html
@@ -49,7 +49,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="main_page.html"><img src="images/logo.png" alt="#" /></a>
+                           <a href="admin_main_page.html"><img src="images/logo.png" alt="#" /></a>
                         </div>
                      </div>
                   </div>
@@ -64,13 +64,13 @@
                      <div class="collapse navbar-collapse" id="navbarsExample04">
                         <ul class="navbar-nav mr-auto">
                            <li class="nav-item active">
-                              <a class="nav-link" href="main_page.html">Home</a>
+                              <a class="nav-link" href="admin_main_page.html">Home</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="about.html">About</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="room.html">Our room</a>
+                              <a class="nav-link" href="admin_room.html">Our room</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="specialOffers.html">Special Offers</a>
@@ -434,7 +434,7 @@
                   <ul class="link_menu">
                      <li class="active"><a href="#">Home</a></li>
                      <li><a href="about.html"> about</a></li>
-                     <li><a href="room.html">Our Room</a></li>
+                     <li><a href="admin_room.html">Our Room</a></li>
                      <li><a href="specialOffers.html">Special Offers</a></li>
                      <li><a href="blog.html">Blog</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
