--- a/admin_main_page.html
+++ b/admin_main_page.html
@@ -70,7 +70,7 @@
                               <a class="nav-link" href="about.html">About</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="admin_room.html">Our room</a>
+                              <a class="nav-link" href="admin_room.php">Our room</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="specialOffers.html">Special Offers</a>
@@ -434,7 +434,7 @@
                   <ul class="link_menu">
                      <li class="active"><a href="#">Home</a></li>
                      <li><a href="about.html"> about</a></li>
-                     <li><a href="admin_room.html">Our Room</a></li>
+                     <li><a href="admin_room.php">Our Room</a></li>
                      <li><a href="specialOffers.html">Special Offers</a></li>
                      <li><a href="blog.html">Blog</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
