--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                               <a class="nav-link" href="specialOffers.html">Special Offers</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="services.html">Services</a>
+                              <a class="nav-link" href="get_services.php">Services</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="contact.html">Contact Us</a>
@@ -146,7 +146,7 @@
                      <li class="active"><a href="about.html"> about</a></li>
                      <li><a href="room.html">Our Rooms</a></li>
                      <li><a href="specialOffers.html">Special Offers</a></li>
-                     <li><a href="services.html">Services</a></li>
+                     <li><a href="get_services.php">Services</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                </div>
