--- a/admin_main_page.html
+++ b/admin_main_page.html
@@ -70,16 +70,16 @@
                               <a class="nav-link" href="about.html">About</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="admin_room.php">Our room</a>
+                              <a class="nav-link" href="admin_room.php">Our&nbsp;rooms</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="specialOffers.html">Special Offers</a>
+                              <a class="nav-link" href="specialOffers.html">Special&nbsp;Offers</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="blog.html">Blog</a>
+                              <a class="nav-link" href="admin_services.php">Services</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="contact.html">Contact Us</a>
+                              <a class="nav-link" href="contact.html">Contact&nbsp;Us</a>
                            </li>
                         </ul>
                         <form class="form-inline" action="includes/logout/logout.inc.php" method="post">
@@ -321,7 +321,7 @@
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
-                  <h2>Blog</h2>
+                  <h2>Services</h2>
                   <p>Lorem Ipsum available, but the majority have suffered </p>
                </div>
             </div>
@@ -436,7 +436,7 @@
                      <li><a href="about.html"> about</a></li>
                      <li><a href="admin_room.php">Our Room</a></li>
                      <li><a href="specialOffers.html">Special Offers</a></li>
-                     <li><a href="blog.html">Blog</a></li>
+                     <li><a href="admin_services.php">Services</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                </div>
