--- a/admin_room.html
+++ b/admin_room.html
@@ -75,7 +75,7 @@
                               <a class="nav-link" href="specialOffers.html">Special Offers</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="blog.html">Blog</a>
+                              <a class="nav-link" href="admin_services.php">Services</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="contact.html">Contact Us</a>
@@ -232,7 +232,7 @@
                      <li><a href="about.html"> about</a></li>
                      <li class="active"><a href="admin_room.html">Our Room</a></li>
                      <li><a href="specialOffers.html">Special Offers</a></li>
-                     <li><a href="blog.html">Blog</a></li>
+                     <li><a href="admin_services.php">Services</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                   </ul>
                </div>
