--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
                               <a class="nav-link" href="about.html">About</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="room.html">Our rooms</a>
+                              <a class="nav-link" href="get_all_rooms.php">Our rooms</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="specialOffers.html">Special Offers</a>
@@ -144,7 +144,7 @@
                   <ul class="link_menu">
                      <li><a href="#">Home</a></li>
                      <li class="active"><a href="about.html"> about</a></li>
-                     <li><a href="room.html">Our Rooms</a></li>
+                     <li><a href="get_all_rooms.php">Our Rooms</a></li>
                      <li><a href="specialOffers.html">Special Offers</a></li>
                      <li><a href="get_services.php">Services</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
