Special offers (Filters NOT DONE)

--- a/admin_main_page.html
+++ b/admin_main_page.html
@@ -73,7 +73,7 @@
                               <a class="nav-link" href="admin_room.html">Our room</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="specialOffers.html">Special Offers</a>
+                              <a class="nav-link" href="get_all_offers.php">Special Offers</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="blog.html">Blog</a>
@@ -435,7 +435,7 @@
                      <li class="active"><a href="#">Home</a></li>
                      <li><a href="about.html"> about</a></li>
                      <li><a href="admin_room.html">Our Room</a></li>
-                     <li><a href="specialOffers.html">Special Offers</a></li>
+                     <li><a href="get_all_offers.php">Special Offers</a></li>
                      <li><a href="blog.html">Blog</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                   </ul>
