--- a/admin_room.html
+++ b/admin_room.html
@@ -72,7 +72,7 @@
                               <a class="nav-link" href="admin_room.html">Our room</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="specialOffers.html">Special Offers</a>
+                              <a class="nav-link" href="get_all_offers.php">Special Offers</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="blog.html">Blog</a>
@@ -107,32 +107,32 @@
 
 
    <!-- our_room -->
-<div class="our_room">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-			<div class="titlepage">
-				<p class="margin_0">Lorem Ipsum available, but the majority have suffered </p>
-			</div>
-			</div>
-		</div>
-		<!-- <button id="addRoomBtn" class="btn btn-success">Add New Room</button> -->
-		<div class="row">
-			<div class="col-md-4 col-sm-6">
-				<div id="serv_hover" class="room">
-					<div class="room_img">
-						<figure><img src="images/room1.jpg" alt="#" /></figure>
-					</div>
-					<div class="bed_room">
-						<h3>Bed Room</h3>
-						<p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
-					</div>
-				</div>
-			</div>
-		</div>  
-		<!-- <form action="includes/add_room.php" method="post"> -->
-		<!-- </form> enctype="multipart/form-data"> -->
-			<!-- <div class="form-group">
+   <div class="our_room">
+      <div class="container">
+         <div class="row">
+            <div class="col-md-12">
+               <div class="titlepage">
+                  <p class="margin_0">Lorem Ipsum available, but the majority have suffered </p>
+               </div>
+            </div>
+         </div>
+         <!-- <button id="addRoomBtn" class="btn btn-success">Add New Room</button> -->
+         <div class="row">
+            <div class="col-md-4 col-sm-6">
+               <div id="serv_hover" class="room">
+                  <div class="room_img">
+                     <figure><img src="images/room1.jpg" alt="#" /></figure>
+                  </div>
+                  <div class="bed_room">
+                     <h3>Bed Room</h3>
+                     <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- <form action="includes/add_room.php" method="post"> -->
+         <!-- </form> enctype="multipart/form-data"> -->
+         <!-- <div class="form-group">
 				<label for="RoomNum" class="form-label">Room Number</label>
 				<input type="text" id="RoomNum" name="RoomNum" class="form-control">
 			</div>
@@ -140,69 +140,71 @@
 				<label for="PricePerNight" class="form-label">Price Per Night</label>
 				<input type="number" id="PricePerNight" name="PricePerNight" class="form-control">
 			</div> -->
-			<!-- Add other fields similarly -->
-			<!-- <div class="form-group">
+         <!-- Add other fields similarly -->
+         <!-- <div class="form-group">
 				<label for="roomImage" class="form-label">Room Image</label>
 				<input type="file" id="roomImage" name="roomImage" class="form-control">
 			</div>
 			<button type="submit" class="btn btn-primary">Add Room</button>
 		</form> -->
 
-		<!-- Trigger Button to Open Add Room form -->
-	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addRoomModal">Add New Room</button>
-  <!-- Modal Structure -->
-   <div class="modal fade" id="addRoomModal" tabindex="-1">
-<!-- </div> aria-labelledby="addRoomModalLabel" aria-hidden="true"> -->
-      <div class="modal-dialog">
-         <div class="modal-content">
-            <div class="modal-header">
-               <h5 class="modal-title" id="addRoomModalLabel"> Add New Room</h5>
-               <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span></button>
-            </div>
-            <!-- ADD ROOM POPUP MENU-->
-            <div class="modal-body">
-               <form action="includes/add_room/add_room.inc.php" method="post" enctype="multipart/form-data">
-               <!-- </form>enctype="multipart/form-data"> -->
-                  <div class="form-group">
-                     <label for="RoomNum" class="form-label">Room Name </label>
-                     <input type="text" id="RoomName" name="room_name" class="form-control">
+         <!-- Trigger Button to Open Add Room form -->
+         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addRoomModal">Add New
+            Room</button>
+         <!-- Modal Structure -->
+         <div class="modal fade" id="addRoomModal" tabindex="-1">
+            <!-- </div> aria-labelledby="addRoomModalLabel" aria-hidden="true"> -->
+            <div class="modal-dialog">
+               <div class="modal-content">
+                  <div class="modal-header">
+                     <h5 class="modal-title" id="addRoomModalLabel"> Add New Room</h5>
+                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span
+                           aria-hidden="true">&times;</span></button>
                   </div>
-                  <div class="form-group">
-                     <label for="PricePerNight" class="form-label">Price Per Night</label>
-                     <input type="number" id="PricePerNight" name="price_per_night" class="form-control">
+                  <!-- ADD ROOM POPUP MENU-->
+                  <div class="modal-body">
+                     <form action="includes/add_room/add_room.inc.php" method="post" enctype="multipart/form-data">
+                        <!-- </form>enctype="multipart/form-data"> -->
+                        <div class="form-group">
+                           <label for="RoomNum" class="form-label">Room Name </label>
+                           <input type="text" id="RoomName" name="room_name" class="form-control">
+                        </div>
+                        <div class="form-group">
+                           <label for="PricePerNight" class="form-label">Price Per Night</label>
+                           <input type="number" id="PricePerNight" name="price_per_night" class="form-control">
+                        </div>
+                        <div class="form-group">
+                           <label for="NumOfBeds" class="form-label">Number of Beds</label>
+                           <input type="number" id="NumOfBeds" name="num_of_beds" class="form-control">
+                        </div>
+                        <div class="form-group">
+                           <label for="RoomType" class="form-label">Room Type</label>
+                           <input type="text" id="RoomType" name="room_type" class="form-control">
+                        </div>
+                        <div class="form-group">
+                           <label for="HasHotTub" class="form-label">Has Hot Tub</label>
+                           <input type="checkbox" id="HasHotTub" name="has_hot_tub" class="form-control">
+                        </div>
+                        <div class="form-group">
+                           <label for="Capacity" class="form-label">Capacity</label>
+                           <input type="number" id="Capacity" name="capacity" class="form-control">
+                        </div>
+                        <div class="form-group">
+                           <label for="Image" class="form-label"></label>Room Image</label>
+                           <input type="file" id="image" name="image" class="form-control">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Add Room</button>
+                     </form>
                   </div>
-                  <div class="form-group">
-                     <label for="NumOfBeds" class="form-label">Number of Beds</label>
-                     <input type="number" id="NumOfBeds" name="num_of_beds" class="form-control">
+                  <div class="modal-footer">
+                     <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close</button>
                   </div>
-                  <div class="form-group">
-                     <label for="RoomType" class="form-label">Room Type</label>
-                     <input type="text" id="RoomType" name="room_type" class="form-control">
-                  </div>
-                  <div class="form-group">
-                     <label for="HasHotTub" class="form-label">Has Hot Tub</label>
-                     <input type="checkbox" id="HasHotTub" name="has_hot_tub" class="form-control">
-                  </div>
-                  <div class="form-group">
-                     <label for="Capacity" class="form-label">Capacity</label>
-                     <input type="number" id="Capacity" name="capacity" class="form-control">
-                  </div>
-                  <div class="form-group">
-                     <label for="Image" class="form-label"></label>Room Image</label>
-                     <input type="file" id="image" name="image" class="form-control">
-                  </div>
-                  <button type="submit" class="btn btn-primary">Add Room</button>
-               </form>
-            </div>
-            <div class="modal-footer">
-               <button type="button" class="btn btn-secondary" data-dismiss="modal"> Close</button>
+               </div>
             </div>
          </div>
+
       </div>
    </div>
-  
-	</div>
-</div>
    <!-- end our_room -->
 
 
@@ -231,7 +233,7 @@
                      <li><a href="#">Home</a></li>
                      <li><a href="about.html"> about</a></li>
                      <li class="active"><a href="admin_room.html">Our Room</a></li>
-                     <li><a href="specialOffers.html">Special Offers</a></li>
+                     <li><a href="get_all_offers.php">Special Offers</a></li>
                      <li><a href="blog.html">Blog</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                   </ul>
