--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
                               <a class="nav-link" href="get_all_rooms.php">Our rooms</a>
                            </li>
                            <li class="nav-item">
-                              <a class="nav-link" href="specialOffers.html">Special Offers</a>
+                              <a class="nav-link" href="get_all_offers.php">Special Offers</a>
                            </li>
                            <li class="nav-item">
                               <a class="nav-link" href="get_services.php">Services</a>
@@ -145,7 +145,7 @@
                      <li><a href="#">Home</a></li>
                      <li class="active"><a href="about.html"> about</a></li>
                      <li><a href="get_all_rooms.php">Our Rooms</a></li>
-                     <li><a href="specialOffers.html">Special Offers</a></li>
+                     <li><a href="get_all_offers.php">Special Offers</a></li>
                      <li><a href="get_services.php">Services</a></li>
                      <li><a href="contact.html">Contact Us</a></li>
                   </ul>
